@@ -1,1 +1,1 @@
-[{"id": 1, "name": "dummy", "email": "dummy@email.com", "level_highscores": [0, 0, 0, 0, 0], "highscore": 0}, {"id": 2, "name": "anotherDummy", "email": "anotherdummy@email.com", "level_highscores": [{"1": 5}, {"2": 15}, {"3": 30}, {"4": 40}, {"5": 30}], "highscore": 120}, {"id": 3, "name": "john", "email": "john@gmail.com", "level_highscores": [0, 0, 0, 0], "highscore": 0}, {"id": 4, "name": "james", "email": "james@gmail.com", "level_highscores": [0, 0, 0, 0], "highscore": 0}]
+[{"id": 1, "name": "dummy", "email": "dummy@email.com", "level_highscores": [0, 0, 0, 0], "highscore": 0}, {"id": 2, "name": "anotherDummy", "email": "anotherdummy@email.com", "level_highscores": [5, 15, 30, 40], "highscore": 90}, {"id": 3, "name": "john", "email": "john@gmail.com", "level_highscores": [0, 0, 0, 0], "highscore": 0}, {"id": 4, "name": "james", "email": "james@gmail.com", "level_highscores": [0, 0, 0, 0], "highscore": 0}, {"id": 5, "name": "jim", "email": "jim@gmail.com", "level_highscores": [0, 0, 0, 0], "highscore": 0}, {"id": 6, "name": "jussi", "email": "jussi@gmail.com", "level_highscores": [0, 0, 0, 0], "highscore": 0}, {"id": 7, "name": "jessi", "email": "jessi@gmail.com", "level_highscores": [0, 0, 0, 0], "highscore": 0}]
