@@ -1,8 +1,39 @@
 from flask import *
+# from flask import request, redirect, url_for
 from json import *
-from utils.repository import *
+from dotenv import *
+import os
+import bcrypt
 
 app = Flask(__name__)
+#app.config['SESSION_COOKIE_SECURE'] = True
+
+# This code was generated by ChatGpt
+# this code ensures that every request made to the server is done
+# as https-requests. Every http-request is redirected to an https-request
+#@app.before_request
+#def enforce_https():
+    #if not request.is_secure and request.url.startswith('http://'):
+        #url = request.url.replace('http://', 'https://', 1)
+        #return redirect(url, code=301)
+
+# loading the .env file containing the api key for the app
+load_dotenv()
+# accessing the api key
+API_KEY = os.environ.get('API_KEY')
+
+# this method is used to check the validity of the password
+# sent with requests to the backend
+def check_api_key(pw):
+    if type(pw) != str:
+        raise Exception("Give password as string object")
+    # hashing the API_KEY that has been turned to bytes array
+    # with randomly generated salt
+    hash = bcrypt.hashpw(API_KEY.encode('utf-8'), bcrypt.gensalt())
+    # checking password received as parameter with api key
+    result = bcrypt.checkpw(pw.encode('utf-8'), hash)
+    # returned values are boolean type
+    return True if result else False
 
 @app.route("/")
 def root():
@@ -10,11 +41,17 @@ def root():
 
 @app.route("/api/highscores")
 def get_highscores():
+    pw = request.args.get("pw")
+    if (check_api_key(pw) == False):
+        return make_response(jsonify("You are unauthorized"), 401)
     highscores = jsonify(fetch_highscores())
     return make_response(highscores, 200)
 
 @app.route('/api/highscores/<int:the_id>')
 def get_players_highscore(the_id):
+    pw = request.args.get("pw")
+    if (check_api_key(pw) == False):
+        return make_response(jsonify("You are unauthorized"), 401)
     players_data = fetch_player_data(the_id)
     if players_data != None:
         # if player with id given as argument is found,
@@ -22,7 +59,7 @@ def get_players_highscore(the_id):
         # which contains only id, name and overall highscore
         # from the data
         return make_response(jsonify({"name": players_data['name'], 
-                                      "highscore": players_data['highscore']}), 200)
+                                    "highscore": players_data['highscore']}), 200)
     else:
         abort(404)
 
@@ -30,13 +67,16 @@ def get_players_highscore(the_id):
 # one of the four levels of the game
 @app.route("/api/highscores", methods=['POST'])
 def add_highscore():
+    pw = request.args.get("pw")
+    if (check_api_key(pw) == False):
+        return make_response(jsonify("You are unauthorized"), 401)
     # the data sent via post request is e.g. {'id': 1, 'name': 'dummy', 'level': 1, 'score': 100}
     sent_data = json.loads(request.data)
     # first we have to make sure that the score that's being sent
     # is greater than the current highscore of the level. First the player data is fetched
     players_data = fetch_player_data(sent_data['id'])
     # the player's new level score has to be measured against the current level highscore
-    level_highscore = players_data['level_highscores'][sent_data['level'] - 1][str(sent_data['level'])]
+    level_highscore = players_data['level_highscores'][sent_data['level'] - 1]
     # if the new score is greater, then it will be saved in the json file
     if sent_data['score'] > level_highscore:
         save_highscore(sent_data['name'], sent_data['level'], sent_data['score'])
@@ -49,7 +89,10 @@ def add_highscore():
 # the delete method is used for deleting all scores,
 # including level highscores and the overall highscore of all levels
 @app.route('/api/highscores/<int:the_id>', methods=['DELETE'])
-def delete_customer(the_id):
+def delete_highscore(the_id):
+    pw = request.args.get("pw")
+    if (check_api_key(pw) == False):
+        return make_response(jsonify("You are unauthorized"), 401)
     # Before deletion, it has to be made sure that
     # the id of a player exists. Otherwise, a response
     # with status code 404 will be sent
@@ -62,6 +105,9 @@ def delete_customer(the_id):
     
 @app.route('/api/new_player', methods=['POST'])
 def create_new_account():
+    pw = request.args.get("pw")
+    if (check_api_key(pw) == False):
+        return make_response(jsonify("You are unauthorized"), 401)
     # the request should contain json object with two properties
     # "name" and "email" and their values
     sent_data = json.loads(request.data)
@@ -81,6 +127,9 @@ def create_new_account():
 
 @app.route('/highscores')
 def show_highscores():
+    pw = request.args.get("pw")
+    if (check_api_key(pw) == False):
+        return make_response(jsonify("You are unauthorized"), 401)
     limit = 100
     sort = "none"
     if request.args.get("sort") != None:
@@ -89,6 +138,9 @@ def show_highscores():
         limit = int(request.args.get("limit"))
     highscores = fetch_highscores(limit, sort)
     return render_template("highscores.html", highscores=highscores)
-
+    
+    #certificate_path = '/path/to/certificate.pem'
+    #private_key_path = '/path/to/private_key.pem'
 if __name__ == "__main__":
     app.run(debug=True)
+    #app.run(host='0.0.0.0', port=443, ssl_context=(certificate_path, private_key_path), debug=True)
