@@ -1,16 +1,16 @@
 
-get http://127.0.0.1:5000/highscores
+get http://127.0.0.1:5000/highscores?pw=monkeyisland
 
 ###
 
-post http://127.0.0.1:5000/highscores
+post http://127.0.0.1:5000/api/highscores?pw=monkeyisland
 content-type: application/json
 
-{"id": 1, "name": "dummy", "level": 1, "score": 100}
+{"id": 1, "name": "dummy", "level": 1, "score": 110}
 
 ###
 
-get http://127.0.0.1:5000/api/scores/1?pw=secret
+get http://127.0.0.1:5000/api/highscores?pw=monkeyisland
 
 ###
 
@@ -30,17 +30,17 @@ get http://127.0.0.1:5000/api/scores?sort=desc&limit=10&pw=secret
 
 ###
 
-delete http://127.0.0.1:5000/api/highscores/1
+delete http://127.0.0.1:5000/api/highscores/1?pw=monkeyisland
 
 ###
 
-get http://127.0.0.1:5000/api/highscores/1
+get http://127.0.0.1:5000/api/highscores/1?pw=monkeyisland
 
 ###
 
-post http://127.0.0.1:5000/api/new_player
+post http://127.0.0.1:5000/api/new_player?pw=monkeyisland
 content-type: application/json
 
-{"name": "james", "email": "james@gmail.com"}
+{"name": "jessi", "email": "jessi@gmail.com"}
 
 ###
